--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^6.0.2",
     "@mui/material": "^6.0.2",
     "@mui/x-data-grid": "^7.16.0",
+    "@mui/x-date-pickers": "^7.16.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
